fixed alignment

--- a/src/app/login/login.page.scss
+++ b/src/app/login/login.page.scss
@@ -46,14 +46,14 @@ ion-content.background{
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-between;
-    margin-top: 20px;
+    margin-top: 60px;
   }
 
   .signin{
     display: flex;
     margin-left: 15px;
     margin-right: 20px;
-    padding-top: 10px;
+    padding-top: 15px;
   }
 
   .icon{
